Fixed some content/spacing on the end text block

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -288,7 +288,7 @@ p {
 
 #end-text-block, .method
   width calc(100% - 20px)
-  margin 0 auto
+  margin 200px auto
   max-width 600px
   font-family $publico
   font-size 1.2rem
